# peca-android

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  import-summary.txt  jitpack.yml  local.properties  settings.gradle
app/: build.gradle  copyto.bat  google-services.json  proguard-rules.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitignore
app/src/main/jni/: Android.mk  Application.mk  AutoPtr.h  CMakeLists.txt  Onigmo-config.h  PeerCastService.cpp  create_assets_peca_zip.sh  generate-htmlzip.sh  org_peercast_core_PeerCastService.cpp
app/src/main/jni/PeerCast-IM4U/: Makefile  README.txt
app/src/main/jni/PeerCast-IM4U/core/common/: channel.cpp  channel.h  common.h  flv.cpp  flv.h  inifile.cpp  pcp.h  servent.cpp  servent.h  servhs.cpp  servmgr.cpp  servmgr.h  stats.cpp  stream.h  ts_vector.h  version2.h
app/src/main/jni/PeerCast-IM4U/core/java/: thread.cpp  thread.h
app/src/main/jni/PeerCast-IM4U/core/unix/: usocket.cpp
app/src/main/jni/PeerCast-IM4U/ui/html/de/: bcid.html  connections.html  relays.html  settings.html
app/src/main/jni/PeerCast-IM4U/ui/html/en/: broadcast.html  logout.html  relayinfo.html  settings.html
app/src/main/jni/PeerCast-IM4U/ui/html/fr/: chaninfo.html  index.html  logout.html  relayinfo.html  viewlog.html
app/src/main/jni/PeerCast-IM4U/ui/html/ja/: broadcast.html  chaninfo.html  connections.html  settings.html  simpleinfo.html  tree.html  trees.html  viewlog.html
app/src/main/jni/PeerCast-IM4U/ui/linux/: main.cpp
app/src/main/res/drawable/: ic_peercast_yt.xml  ic_prefs.xml
app/src/main/res/drawable-anydpi/: ic_yt.xml
app/src/main/res/drawable-hdpi/: Thumbs.db
app/src/main/res/drawable-mdpi/: Thumbs.db
app/src/main/res/drawable-mdpi-v11/: Thumbs.db
app/src/main/res/drawable-xhdpi/: Thumbs.db
app/src/main/res/drawable-xxhdpi/: Thumbs.db
app/src/main/res/drawable-xxxhdpi/: Thumbs.db
app/src/main/res/layout/: activity_peer_cast_tv.xml  ch_item_c.xml  ch_item_g.xml  gui.xml  logviewer_fragment.xml  logviewer_line.xml  main_activity.xml  peercast_activity.xml  peercast_activity_flexible.xml  peercast_activity_simple.xml  peercast_activity_static.xml  peercast_activity_webview.xml  peercast_fragment.xml  setting_activity_button.xml  setting_activity_footer.xml  setting_fragment_footer.xml  yt_webview_fragment.xml
app/src/main/res/menu/: channel_context_menu.xml  cmenu_channel.xml  cmenu_servent.xml  logviewer_menu.xml  main_menu.xml  menu.xml  pecaport_menu.xml  peercast_menu.xml  servent_context_menu.xml  yt_webview_menu.xml  yt_webview_play_menu.xml
app/src/main/res/values/: dimens.xml  prefs.xml  strings.xml  styles.xml  value.xml  yt.xml
app/src/main/res/values-de/: yt.xml
app/src/main/res/values-fr/: yt.xml
app/src/main/res/values-h720dp/: value.xml
app/src/main/res/values-ja/: prefs.xml  strings.xml  yt.xml
app/src/main/res/values-sw640dp/: dimens.xml  value.xml
app/src/main/res/xml/: backup.xml  prefs.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/res/layout/: preference_dialog_edittext_number.xml
common/src/main/res/values/: ic_launcher_v4_background.xml  string.xml  yt.xml
common/src/main/res/values-de/: yt.xml
common/src/main/res/values-ja/: string.xml  yt.xml
core/: .gitignore  build.gradle  proguard-rules.pro
core/src/main/: AndroidManifest.xml
core/src/main/assets/: .gitignore
core/src/main/jni/: CMakeLists.txt  JniHelper.cpp  JniHelper.h  MiniUpnp.cpp  PeerCastService.cpp  asubprog.cpp  generate-htmlzip.sh  parse_catalog.py
core/src/main/res/drawable-anydpi-v24/: ic_notification_clear_cache.xml
core/src/main/res/mipmap-anydpi-v26/: ic_launcher_v4.xml  ic_launcher_v4_round.xml
core/src/main/res/raw/: default_peercast_ini.txt
core/src/main/res/raw-ja/: default_peercast_ini.txt
core/src/main/res/values/: strings.xml
core/src/main/res/values-ja/: strings.xml
core/src/main/res/xml/: backup.xml
gradle/wrapper/: gradle-wrapper.properties
libpeercast/: README.md  build.gradle  proguard-rules.pro
libpeercast/src/main/: AndroidManifest.xml
libpeercast/src/main/res/values/: strings.xml
peca-android/: LICENSE-MIT.txt  build.gradle
peca-android/app/: build.gradle  proguard-rules.txt
peca-android/app/src/main/: AndroidManifest.xml
peca-android/app/src/main/jni/: Android.mk  Application.mk  create_jniheader.sh  org_peercast_core_PeerCastService.cpp  org_peercast_core_PeerCastService.h
pecaport/: build.gradle  proguard-rules.pro
pecaport/src/main/: AndroidManifest.xml
pecaport/src/main/res/color/: wan_connection_status.xml
pecaport/src/main/res/drawable/: ic_server_network_36dp.xml  mapping_entry_header_cell.xml  portmapping_header_cell_bg.xml
pecaport/src/main/res/layout/: active_network.xml  add_port_dialog.xml  mapping_entry_data_cell.xml  mapping_entry_data_row.xml  mapping_entry_header_row.xml  network_interface_item.xml  pecaport.xml  pecaport_fragment.xml  peercast_button.xml  portmapping_header_cell.xml  wan_connection_dropdown_item.xml  wan_connection_item.xml
pecaport/src/main/res/values/: strings.xml  upnp_strings.xml
pecaport/src/main/res/values-ja/: strings.xml  upnp_strings.xml
preferences/src/main/: AndroidManifest.xml
settings/: build.gradle
settings/src/main/: AndroidManifest.xml
settings/src/main/res/values/: prefs.xml  string.xml  yt.xml
settings/src/main/res/values-fr/: yt.xml
settings/src/main/res/values-ja/: prefs.xml  string.xml
settings/src/main/res/xml/: prefs.xml
tv/: build.gradle
tv/src/main/: AndroidManifest.xml
tv/src/main/res/color/: grid_item_background.xml
tv/src/main/res/drawable/: ic_baseline_bookmark_border_36.xml  ic_baseline_refresh_64.xml  ic_baseline_speaker_notes_96.xml
tv/src/main/res/layout/: activity_details.xml  activity_peer_cast_tv.xml  grid_item.xml  text_card_view.xml  tv_loading_fragment.xml
tv/src/main/res/values/: colors.xml  strings.xml  styles.xml
tv/src/main/res/values-ja/: strings.xml
ui/: build.gradle
ui/src/main/: AndroidManifest.xml
upnp/: build.gradle  proguard-rules.pro
(+417 files in other folders)
